--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 <body>
     <section>
       <heading>
-        
-        <h1>My Tribute Page</h1>
-        <h3>Enjoying the Utah mountains with my family.</h3>
+        <div class='header'>
+        <p>My Tribute Page</p>
+        <span>Enjoying the Utah mountains with my family.</span>
+      </div>
       </heading>
         
         <div id='canvasForHTML'></div>
